# ai-fdeflate

./: CHANGES.md  Cargo.toml  README.md
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deflate.rs  inflate.rs  inflate_bytewise.rs  inflate_bytewise2.rs  inflate_miniz.rs  inflate_split.rs  stored.rs
src/: decompress.rs  huffman.rs  lib.rs
src/compress/: bitstream.rs  bitwriter.rs  mod.rs  ultrafast.rs
src/compress/matchfinder/: hashchain.rs  hashtable.rs  hybrid.rs  mod.rs
src/compress/parse/: greedy.rs  lazy.rs  mod.rs  rle.rs
src/decompress/tests/: test_utils.rs
