[package]
name = "ai-fdeflate"
version = "0.3.7"
edition = "2021"
publish = true

# note: when changed, also update test runner in `.github/workflows/rust.yml`
rust-version = "1.88.0"

license = "MIT OR Apache-2.0"
description = "A no_std port of fdeflate"
authors = ["The image-rs Developers"]
include = ["/src", "/tests", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

# crates.io metadata
documentation = "https://docs.rs/ai-fdeflate"
repository = "https://github.com/atom-planet-embrace/ai-fdeflate"
homepage = "https://github.com/atom-planet-embrace/ai-fdeflate"
categories = ["compression"]

[features]
default = []
std = ["simd-adler32/std", "no_std_io/std"]
simd = ["simd-adler32/default"]

[dependencies]
no_std_io = { version = "0.6", default-features = false }
simd-adler32 = { version = "0.3.4", default-features = false }

[dev-dependencies]
miniz_oxide = "0.8.9"
rand = "0.8.5"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }
